some attempts to create aggregation report with sqlalchemy
